# TableViewQT

./: .gitignore  CMakeLists.txt  EventManager.kdev4  README  README.md  main.cpp
inc/: eventmanager.h
inc/controler/: proxymodel.h
inc/models/: event.h  tablemodel.h
src/: eventmanager.cpp  eventmanager.ui
src/controler/: proxymodel.cpp
src/models/: event.cpp  tablemodel.cpp
test/: main.cpp  testsuite.cpp  testsuite.h
test/controler/: testtablemodel.cpp
test/models/: testtablemodel.cpp  testtablemodel.h
